# ChangeLog for app-emulation/qemu-softmmu
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-softmmu/Attic/ChangeLog,v 1.1 2005/06/18 11:49:16 lu_zero Exp $

*qemu-softmmu-0.7.0-r1 (18 Jun 2005)

  18 Jun 2005; Luca Barbato <lu_zero@gentoo.org>
  +files/qemu-softmmu-0.7.0-errno.patch, +files/kqemu-sysfs.patch,
  +metadata.xml, +qemu-softmmu-0.7.0-r1.ebuild:
  qemu split ebuild, system emulators
