@@ -1,6 +1,8 @@
 MD5 898131aae735c3477ff2f9c6882f1178 metadata.xml 223
+MD5 caa2660ffda21a47646b4cc9e9584b1f qemu-softmmu-0.7.1.ebuild 3914
 MD5 754955c38d3fe7db22e4bb6842c93c05 qemu-softmmu-0.7.0-r1.ebuild 3956
-MD5 a6bac601aa366dab6428f29aeef7f1f7 ChangeLog 467
+MD5 1b8e38f5491ad3cc5f183707b9bc14aa ChangeLog 594
 MD5 f2e48bae97dad4e6e6bccdb212124ae0 files/digest-qemu-softmmu-0.7.0-r1 127
+MD5 fd7335121f3422f52ac0dfe371ffb6b8 files/digest-qemu-softmmu-0.7.1 125
 MD5 87ec2e1fa832612fb834d7dd49cf7e5c files/kqemu-sysfs.patch 2094
 MD5 3202f7445799cce82ccaac9749e1443d files/qemu-softmmu-0.7.0-errno.patch 487
