@@ -1,0 +1,2 @@
+MD5 b0c80d2c082049a5b8ccbc7f55fe165b qemu-0.7.1.tar.gz 1338521
+MD5 8fc7967492b2157521198f6639218420 kqemu-0.7.1.tar.gz 76135
