@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/qemu-softmmu
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-softmmu/Attic/ChangeLog,v 1.1 2005/06/18 11:49:16 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-softmmu/Attic/ChangeLog,v 1.2 2005/07/25 22:36:49 lu_zero Exp $
+
+*qemu-softmmu-0.7.1 (25 Jul 2005)
+
+  25 Jul 2005; Luca Barbato <lu_zero@gentoo.org> +qemu-softmmu-0.7.1.ebuild:
+  New version
 
 *qemu-softmmu-0.7.0-r1 (18 Jun 2005)
 
